fix collapse-menu

--- a/css/mixin.less
+++ b/css/mixin.less
@@ -167,7 +167,7 @@
   top: 0;
   left: 0;
   z-index: 1000;
-  overflow: scroll;
+  overflow-y: scroll;
   text-transform: uppercase;
   font-size: @font;
   opacity: 0;
